# phoenix-starter-kits

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/phoenix_starter_kits/: cli.py
src/phoenix_starter_kits/commands/: init.py
src/phoenix_starter_kits/generators/: project_generator.py  template_engine.py
src/phoenix_starter_kits/templates/langchain-rag/: cookiecutter.json
src/phoenix_starter_kits/templates/langchain-rag/{{cookiecutter.project_slug}}/: .env.example  main.py  requirements.txt
src/phoenix_starter_kits/templates/llamaindex-qa/: cookiecutter.json
src/phoenix_starter_kits/templates/llamaindex-qa/{{cookiecutter.project_slug}}/: .env.example  main.py  requirements.txt
